# christmas-app

./: .env  .env.example  Dockerfile  README.md  app.py  azure_data.py  pyproject.toml  requirements.txt  upload_data.py
.github/workflows/: dev_byrnechristmas.yml  dev_byrneelfs.yml
